# ZKP

./: .gitignore  LICENSE  README.md  pyproject.toml  zeroknowledge.ipynb  zeroknowledgeproof.py
