[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-knowledge-proof-demo"
version = "0.1.0"
authors = [
    {name = "balancedscorpion", email = "example@example.com"},
]
description = "A tutorial on zero-knowledge proofs with interactive examples"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyter",
    "notebook",
    "matplotlib",
    "numpy",
    "networkx",
    "cryptography",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/balancedscorpion/zero-knowledge-proof"
"Bug Tracker" = "https://github.com/balancedscorpion/zero-knowledge-proof/issues"

[tool.setuptools]
packages = ["zkp_demo"]